[package]
name = "git_workflow"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }